objects/POC_Order__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billing_Address__c</fullName>
        <label>Billing Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <label>Contact - Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_Mobile__c</fullName>
        <label>Contact - Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Country_Code__c</fullName>
        <label>Country Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer ID</label>
        <referenceTo>POC_Customer__c</referenceTo>
        <relationshipLabel>POC - Orders</relationshipLabel>
        <relationshipName>POC_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <label>Customer Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewTaskId__c</fullName>
        <label>NewTaskId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Address__c</fullName>
        <label>Shipping Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>待发货</fullName>
                </value>
                <value>
                    <fullName>已发货</fullName>
                </value>
                <value>
                    <fullName>已签收</fullName>
                </value>
                <value>
                    <fullName>售后中</fullName>
                </value>
                <value>
                    <fullName>已退货/退款</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>POC - Order</label>
    <nameField>
        <label>Order ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>POC - Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>